# fmbench-orchestrator

./: .gitignore  README.md  THIRD_PARTY_LICENSES.txt  config.yml  constants.py  digest.txt  globals.py  main.py  multi_deploy_ec2.ipynb  multi_deploy_ec2.py  pyproject.toml  requirements.txt  startup_script.sh  utils.py
analytics/: analytics.py  pricing.yml
byo_dataset/: OpenOrca.jsonl  synthetic_data_large_prompts.jsonl
configs/: ami_mapping.yml  bedrock.yml  byo_instance.yml  config-ec2-llama3-8b.yml  config.yml  ec2.yml  ec2_byo_instance.yml  ec2_custom_dataset.yml  ec2_llama3.2-1b-cpu-byodataset.yml  infra.yml  sagemaker.yml
configs/bedrock/: llama3.1-bedrock.yml  llama3.2-bedrock.yml  nova-convfinqa.yml
configs/deepseek/: config-deepseek-r1-32b-vllm.yml  config-deepseek-r1-longbench.yml  config-deepseek-r1-openorca.yml  config-deepseek-r1-vllm-convfinqa.yml  config-deepseek-r1-vllm.yml  config-deepseek-r1.yml  deepseek-convfinqa.yml  deepseek-longbench.yml  deepseek-openorca.yml  deepseek.yml
configs/llama3.2/: llama3.2-1b-cpu-intel-amd.yml
custom_prompt_templates/: prompt_template_convfinqa.txt  prompt_template_deepseek.txt  prompt_template_deepseek_longbench.txt  prompt_template_llama3.3_open_orca_base_prompt.txt  prompt_template_nova_open_orca_base_prompt.txt  prompt_template_qwen_open_orca.txt
docs/: config_guide.md  iam.md
post_startup_scripts/: fmbench copy.txt  fmbench.txt
startup_scripts/: az_linux2_startup.txt  cpu_al2023_startup.txt  gpu_ubuntu_startup.txt  neuron_al2_startup_triton.txt  ubuntu_arm_startup.txt  ubuntu_startup.txt
(+23 files in other folders)
