[project]
name = "fmbench-orchestrator"
version = "0.1.0"
description = "Automates LLM benchmarking with fmbench"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.21",
    "botocore>=1.35.99",
    "ipykernel>=6.29.5",
    "jinja2==3.1.4",
    "jupyter-client>=8.6.3",
    "pandas==2.2.3",
    "paramiko==3.5.0",
    "plotly==5.24.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "scp==0.15.0",
    "seaborn==0.13.2",
    "tomark==0.1.4",
    "wget==3.2",
    "zmq>=0.0.0",
]
